--- a/Documents/Requirements Document.tex
+++ b/Documents/Requirements Document.tex
@@ -36,6 +36,9 @@
 	\hline
 	Developer & Date & Change & Revision \\
 	\hline
+	Hui Chen & Dec 8 2015 & \begin{tabular}[c]{@{}c@{}}Revised Non-functional 
+	\\Requirements \end{tabular} & 14\\
+	\hline
 	Nareshkumar Maheshkumar & Dec 4 2015 & \begin{tabular}[c]{@{}c@{}}Revised 3.4, 4.8 and 5.8 \\ in the Requirements Document\end{tabular} & 13\\
 	\hline 
 	Hui Chen & Dec 2 2015 & \begin{tabular}[c]{@{}c@{}}Revised: Fixed the numbering\\ in 3.3 and 3.4 in the \\Requirements Document\end{tabular} & 12\\
@@ -61,7 +64,7 @@
 	Nareshkumar Maheshkumar & Oct 3\&9 2015 & &2 \\
 	\hline
 	Hui Chen & Sept 29 2015& Created requirements document	& 1 \\
-
+	\hline
 	\end{tabular}
 	\end{center}
 	\end{table}
@@ -174,33 +177,33 @@
 	\subsection{Look and Feel Requirements}
 	\textbf{Appearance Requirements} 
 	\begin{itemize}
-	\item 	The interface should be intuitive for beginners and the look should feel 					familiar to users of any operating system
-	\item	The overall look should be clean and uncluttered
+	\item 	\textcolor{red}{APP1:} The interface should be intuitive for beginners and the look should feel 					familiar to users of any operating system
+	\item	\textcolor{red}{APP2:} The overall look should be clean and uncluttered
 	\end{itemize}
 	
 	\textbf{Style Requirements}
  	\begin{itemize}
- 	\item 	The user interface of the game should be appealing enough for the user to 					continuously want to play the game
+ 	\item 	\textcolor{red}{STY1:}The user interface of the game should be appealing enough for the user to 					continuously want to play the game
 	\end{itemize}
 	\subsection{Usability and Humanity Requirements}
 	\textbf{Ease of Use Requirements}
 	\begin{itemize}
-	\item 	The interface should be easy for a beginner player to start playing immediately 			after reading the rules section of the program
-	\item 	The interface shall be intuitive and easy to navigate 
+	\item 	\textcolor{red}{USE1:}The interface should be easy for a beginner player to start playing immediately 			after reading the rules section of the program
+	\item 	\textcolor{red}{USE2:}The interface shall be intuitive and easy to navigate 
 	\end{itemize}
 	\textbf{Ease of Learning Requirements}
 	\begin{itemize}
-	\item 	The rules section should be clear and concise so that someone with no prior 				knowledge can understand
-	\item 	The user interface should contain objects in an organized and uncluttered 					manner for ease of gameplay.
+	\item 	\textcolor{red}{LRN1:}The rules section should be clear and concise so that someone with no prior 				knowledge can understand
+	\item 	\textcolor{red}{LRN2:}The user interface should contain objects in an organized and uncluttered 					manner for ease of gameplay.
 	\end{itemize}
 	
 	\subsection{Performance Requirements}
 	\textbf{Speed requirements}
 	\begin{itemize}
-	\item 	The game should load within 3 seconds after execution
-	\item 	The computer player should respond within 2 second
-	\item 	Button action(s) should be performed immediately
-	\item 	The game graphic should refresh every 1 seconds (1Hz)
+	\item 	\textcolor{red}{SPD1:}The game should load within 3 seconds after execution
+	\item 	\textcolor{red}{SPD2:}The computer player should respond within 2 second
+	\item 	\textcolor{red}{SPD3:}Button action(s) should be performed immediately
+	\item 	\textcolor{red}{SPD4:}The game graphic should refresh every 1 seconds (1Hz)
 	\end{itemize}	
 	\textbf{Safety and Critical requirements}
 	\begin{itemize}
@@ -208,28 +211,28 @@
 	\end{itemize}
 	\textbf{Precision Requirements}
 	\begin{itemize}
-	\item	The computer player should calculate probabilities accurate to 4 decimal places
-	\item	The deck shuffling should be as random as possible
+	\item	\textcolor{red}{PSN1:}The computer player should calculate probabilities accurate to 4 decimal places
+	\item	\textcolor{red}{PSN2:}The deck shuffling should be as random as possible
 	\end{itemize}
 	\textbf	Reliability and Availability Requirements
 	\begin{itemize}
-	\item 	Should be available on any operating systems (Windows, OS X, Linux)
-	\item 	Should be available until program closes
+	\item 	\textcolor{red}{RAA1:}Should be available on any operating systems (Windows, OS X, Linux)
+	\item 	\textcolor{red}{RAA2:}Should be available until program closes
 	\end{itemize}
 	\textbf Capacity Requirement 
 	\begin{itemize}
-	\item 	The program shall be played by a single user on a single machine
+	\item 	\textcolor{red}{CAP1:}The program shall be played by a single user on a single machine
 	\end{itemize}
 	
 	\subsection{Operational and Environmental Requirements}
 	\textbf{Expected physical environment}
 	\begin{itemize}
-	\item	The program shall be used by a single user in any environment the user wishes
+	\item	\textcolor{red}{EPE1:}The program shall be used by a single user in any environment the user wishes
 	\end{itemize}
 	\textbf{Expected Technological environment}
 	\begin{itemize}
-	\item	The program shall run on any machine that has java
- 	\item	The program is an offline application and needs no Internet connection to run
+	\item	\textcolor{red}{ETE1:}The program shall run on any machine that has java
+ 	\item	\textcolor{red}{ETE2:}The program is an offline application and needs no Internet connection to run
 	\end{itemize}	
 	\textbf{Partner Applications}
 	\begin{itemize}
@@ -239,12 +242,12 @@
 	\subsection{Maintainability and Support Requirements}
 	\textbf{Ease of Maintainability}
 	\begin{itemize}
-	\item	The program does not need to be maintained once development has been completed
+	\item	\textcolor{red}{EOM1:}The program does not need to be maintained once development has been completed
 	\end{itemize}
 	\textbf{Portability requirements}
 	\begin{itemize}
-	\item	The product is expected to run under the Windows, Apple and LINUX operating 				systems.
-	\item 	The product should not be resource intensive
+	\item	\textcolor{red}{POR1:}The product is expected to run under the Windows, Apple and LINUX operating 				systems.
+	\item 	\textcolor{red}{POR2:}The product should not be resource intensive
 	\end{itemize}
 
 	\subsection{Security Requirements}
@@ -253,11 +256,11 @@
 	\end{itemize}
 	\subsection{Cultural Requirements}
 	\begin{itemize}
-	\item 	The program shall not use icons that could be considered offensive in any of 				our market countries.
+	\item 	\textcolor{red}{CUL:}The program shall not use icons that could be considered offensive in any of 				our market countries.
 	\end{itemize}
 	\subsection{Legal Requirements}
 	\begin{itemize}
-	\item	The program shall deal with only virtual currency
+	\item	\textcolor{red}{LEG1:}The program shall deal with only virtual currency
 	\item 	\sout{The program will have a disclaimer stating that it does not advocate illegal 				gambling and should not be used as a tool to do so}
 	\end{itemize}
 	\section{Project Issues}
