Revise SRS(Requirements Document)

--- a/Documents/Requirements Document.tex
+++ b/Documents/Requirements Document.tex
@@ -29,15 +29,21 @@
 	
 	\newpage
 	\section*{Revision History}
-	\begin{table}[h]
+	\begin{table}[H]
 	\begin{center}
 	\caption{Revision History Table}
 	\begin{tabular}{|| c c c c || }\\
 	\hline
 	Developer & Date & Change & Revision \\
 	\hline
+    Hui Chen & Dec 8 2015 & \begin{tabular}[c]{@{}c@{}}Revised section 5\\ in the Test Report Document\end{tabular} & 17\\
+  	\hline
+	Nareshkumar Maheshkumar & Dec 8 2015 & \begin{tabular}[c]{@{}c@{}}Revised 2,3, 4.2.4, 4.2.5, 8, 9, 15 \\and 16 in the Design Document\end{tabular} & 16\\	
+	\hline
+  	Hui Chen & Dec 8 2015 & \begin{tabular}[c]{@{}c@{}}Revised section 2.1, 2.2.2, 2.2.3\\ in the Test Plan Document\end{tabular} & 15\\	
+	\hline
 	Hui Chen & Dec 8 2015 & \begin{tabular}[c]{@{}c@{}}Revised Non-functional 
-	\\Requirements \end{tabular} & 14\\
+	Requirements\\ in the Requirements Document \end{tabular} & 14\\
 	\hline
 	Nareshkumar Maheshkumar & Dec 4 2015 & \begin{tabular}[c]{@{}c@{}}Revised 3.4, 4.8 and 5.8 \\ in the Requirements Document\end{tabular} & 13\\
 	\hline 
