Revise Test Plan

--- a/Documents/Test-Plan.tex
+++ b/Documents/Test-Plan.tex
@@ -22,31 +22,44 @@
 		Group E
 		\end{center}
 	\end{titlepage}
-	
+	\newpage
+	\section*{Revision History}
+	\begin{table}[H]
+	\caption{Revision History Table}
+	\begin{tabular}{|| c c c c ||}
+  	\hline
+  	Developer & Date & Change & Revision\\
+  	\hline
+    Hui Chen & Dec 8 2015 & \begin{tabular}[c]{@{}c@{}}Revised section 5\\ in the Test Report Document\end{tabular} & 8\\
+  	\hline
+	Nareshkumar Maheshkumar & Dec 8 2015 & \begin{tabular}[c]{@{}c@{}}Revised 2, 3, 4.2.4, 4.2.5, 8, 9, 15 \\and 16 in the Design Document\end{tabular} & 7\\  	
+  	\hline
+  	Hui Chen & Dec 8 2015 & \begin{tabular}[c]{@{}c@{}}Revised section 2.1, 2.2.2, 2.2.3\\ in the Test Plan Document\end{tabular} & 6\\
+  	\hline
+	Hui Chen & Dec 8 2015 & \begin{tabular}[c]{@{}c@{}}Revised Non-functional Requirements\\in the Requirements Document \end{tabular} & 5\\
+	\hline
+	Nareshkumar Maheshkumar & Dec 4 2015 & \begin{tabular}[c]{@{}c@{}}Revised 3.4, 4.8 and 5.8 \\ in the Requirements Document\end{tabular} & 4\\
+	\hline 
+	Hui Chen & Dec 2 2015 & \begin{tabular}[c]{@{}c@{}}Revised: Fixed the numbering\\ in 3.3 and 3.4 in the \\Requirements Document\end{tabular} & 3\\
+	\hline 
+	Sam Hamel & Dec 2 2015 & \begin{tabular}[c]{@{}c@{}}Revised: Number the Functional \\Requirements in the \\Requirements Document\end{tabular} & 2 \\
+  	\hline
+  	Hui chen & Nov 28 & \begin{tabular}[c]{@{}c@{}}Made changes to section\\2.3 Usability and \\ Learnability Tests \end{tabular} & 1\\ 
+  	\hline
+  	Nareshkumar Maheshkumar & Oct 22 & Proofread & 0\\
+  	
+  	\hline
+  	\begin{tabular}[c]{@{}c@{}}Sam Hamel\\Hui Chen\end{tabular}  & Oct 21 & Test Plan Revision 0 finished & 0\\
+  	 \hline
+  	Hui Chen & Oct 20 & Started Test Plan document & 0\\  	
+  	\hline
+	\end{tabular}
+	\end{table}
 	\newpage
 	\tableofcontents
 	\listoftables
 	
-	\newpage
-	\begin{table}[h]
-	\caption{Revision History Table}
-	\begin{tabular}{|p{1.5cm}|l|p{3cm}|p{6cm}|}
-  	\hline
-  	Revision \# & Date & Team Member & Description of Change\\
-  	\hline
-  	0 & October 20 & Hui Chen & Started Test Plan document\\
-  	\hline
-  	0 & October 21 & Sam Hamel  & Test Plan Revision 0 finished\\
-  	 & & Hui Chen & \\
-  	\hline
-  	0 & October 22 & Nareshkumar Maheshkumar & Proofread\\
-  	\hline
-  	1 & November 28 & Hui chen & Made changes to section 2.3 Usability and Learnability Tests\\
-  	\hline
-  	2 & December 8 & Hui Chen & Revised section 2.1, 2.2.2, 2.2.3\\
-  	\hline
-	\end{tabular}
-	\end{table}
+	
 	\newpage
 	
 	\section{General Information}
