Revise Test Report

--- a/Documents/TestReport.tex
+++ b/Documents/TestReport.tex
@@ -21,36 +21,49 @@
 		Group E
 		\end{center}
 	\end{titlepage}
+	\newpage
+	
+	\section*{Revision History}
+	\begin{table}[H]
+	\caption{Revision History Table}
+	\begin{tabular}{|| c c c c || }
+	\hline
+	Developer & Date & Change & Revision \\
+	\hline
+    Hui Chen & Dec 8 2015 & \begin{tabular}[c]{@{}c@{}}Revised section 5\\ in the Test Report Document\end{tabular} & 10\\
+  	\hline
+	Nareshkumar Maheshkumar & Dec 8 2015 & \begin{tabular}[c]{@{}c@{}}Revised 2, 3, 4.2.4, 4.2.5, 8, 9, 15 \\and 16 in the Design Document\end{tabular} & 9\\	
+	\hline
+  	Hui Chen & Dec 8 2015 & \begin{tabular}[c]{@{}c@{}}Revised section 2.1, 2.2.2, 2.2.3\\ in the Test Plan Document\end{tabular} & 8\\	
+	\hline
+	Hui Chen & Dec 8 2015 & \begin{tabular}[c]{@{}c@{}}Revised Non-functional 
+	Requirements\\ in the Requirements Document \end{tabular} & 7\\
+	\hline
+	Nareshkumar Maheshkumar & Dec 4 2015 & \begin{tabular}[c]{@{}c@{}}Revised 3.4, 4.8 and 5.8 \\ in the Requirements Document\end{tabular} & 6\\
+	\hline 
+	Hui Chen & Dec 2 2015 & \begin{tabular}[c]{@{}c@{}}Revised: Fixed the numbering\\ in 3.3 and 3.4 in the \\Requirements Document\end{tabular} & 5\\
+	\hline 
+	Sam Hamel & Dec 2 2015 & \begin{tabular}[c]{@{}c@{}}Revised: Number the Functional \\Requirements in the \\Requirements Document\end{tabular} & 4 \\
+  	\hline  	
+  	Hui Chen & Nov 28 2015 & Added Method of Testing/Update format & 3\\  	
+  	\hline
+  	\begin{tabular}[c]{@{}c@{}}Nareshkumar Maheshkumar\\ Sam Hamel\end{tabular} & Nov 28 2015 & \begin{tabular}[c]{@{}c@{}}Added Introduction and \\Automated Tests\end{tabular} & 2\\
+  	\hline
+  	
+  	Sam Hamel & Nov 28 2015 & \begin{tabular}[c]{@{}c@{}}Add matrix coverage and\\ Traceability Table\end{tabular} & 1\\
+  	\hline
+  	Hui Chen & Nov 28 & \begin{tabular}[c]{@{}c@{}}Added Nonfunctional Quality\\Quality Test and Summary\end{tabular} & 0\\
+  	\hline
+  	Hui Chen & Nov 26 & Started Test Report document& 0\\
+  	\hline  	
+  	\end{tabular}
+	\end{table}
 	
 	\newpage
 	\tableofcontents
 	\listoftables
-	\newpage
-	
-	\section{Revision History}
-	\begin{table}[h]
-	\caption{Revision History Table}
-	\begin{tabular}{|l|l|p{3cm}|p{6cm}|}
-  	\hline
-  	Revision \# & Date & Team Member & Description of Change\\
-  	\hline
-  	0 & November 26 & Hui Chen & Started Test Report document\\
-  	\hline
-  	0 & November 28 & Hui Chen & Added Nonfunctional Quality Test and Summary\\
-  	\hline
-  	1 & November 28 & Sam Hamel & Added Matrix Coverage \& Traceability table\\
-  	\hline
-  	2 & November 28 & Nareshkumar Maheshkumar & Added Introduction and Automated Tests\\
-  	& & Sam Hamel & \\
-  	\hline
-  	3 & November 28 & Hui Chen & Added Method of Testing/Update format\\
-  	\hline
-  	4 & December 8 & Hui Chen & Revised section 6 \\
-  	\hline
-	\end{tabular}
-	\end{table}
-	\newpage
-	
+	\newpage	
+		
 	\section{Introductions}
 	\subsection{Objective}
 	The main functions that are being tested are Player moves, Player betting, management of chips, management of pot, card distribution and hand ranking; these are all tested using Junit. Also included in the test report is the results of manually testing the GUI and the results of a usability test, which was surmised through surveying five people. The testing produced no errors and the usability test result met the acceptable criteria stated in the requirements document.
